--- a/README.html
+++ b/README.html
@@ -377,9 +377,16 @@ summary {
 
 <div id="mlb-modeling-the-importance-of-the-3-phases-to-wins" class="section level1">
 <h1>MLB – Modeling the Importance of the 3 Phases to Wins</h1>
-<p>In this project, we use an OLS model to estimate the importance of an MLB team’s pitching, fielding, and batting skills to their Win%.</p>
-<p>‘MLBFinalProject.ipynb’</p>
-<p>‘SAL384FinalData.csv’</p>
+<p>In this project, we use an OLS model to estimate the importance of an MLB team’s pitching, fielding, and batting performance during a season to their Win%.</p>
+<div id="code-web-scraping" class="section level2">
+<h2>Code – Web Scraping</h2>
+<p><code>MLBFinalProject.ipynb</code> Includes code to scrape every team’s basic batting, pitching, and fielding data from BaseballReference. We also scrape the standings for each season from 2000-2020 and join that data with the team stats for those years.</p>
+</div>
+<div id="data" class="section level2">
+<h2>Data</h2>
+<p>Our data includes basic batting statistics like HR, H, and OPS+. Pitching stats including SO, FIP, and WHIP can also be found in the data. Some fielding stats in the data include DefEff, E, and Fld%.</p>
+<p><em>The data for this project was courtesy of BaseballReference.</em> <em>Link: <a href="https://www.baseball-reference.com/" class="uri">https://www.baseball-reference.com/</a></em></p>
+</div>
 </div>
 
 
